WIP nums, calculator window complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
   <div class="calculator-container">
-    <div class="calculator-body">This is the calculator</div>
+    <div class="calculator-body">
+      <div class="calculator-num-window"></div>
+      <div class="calculator-num"></div>
+    </div>
   </div>
 
 </body>
