WIP UI complete except for operation signs and header buttons

--- a/index.html
+++ b/index.html
@@ -11,8 +11,76 @@
 <body>
   <div class="calculator-container">
     <div class="calculator-body">
-      <div class="calculator-num-window"></div>
-      <div class="calculator-num"></div>
+      <div class="calculator-window"></div>
+      <div class="calculator-nums">
+        <div class="calculator-row">
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">AC</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">+/-</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">%</p>
+          </div>
+          <div class="calculator-button calculator-operations">
+            <p class="">÷</p>
+          </div>
+        </div>
+        <div class="calculator-row">
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">7</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">8</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">9</p>
+          </div>
+          <div class="calculator-button calculator-operations">
+            <p class="calculator-font"></p>
+          </div>
+        </div>
+        <div class="calculator-row">
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">4</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">5</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">6</p>
+          </div>
+          <div class="calculator-button calculator-operations">
+            <p class="calculator-font">—</p>
+          </div>
+        </div>
+        <div class="calculator-row">
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">1</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">2</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">3</p>
+          </div>
+          <div class="calculator-button calculator-operations">
+            <p class="calculator-font">+</p>
+          </div>
+        </div>
+        <div class="calculator-row">
+          <div class="calculator-button-zero calculator-num-colors">
+            <p class="calculator-font">0</p>
+          </div>
+          <div class="calculator-button calculator-num-colors">
+            <p class="calculator-font">•</p>
+          </div>
+          <div class="calculator-button calculator-operations">
+            <p class="calculator-font">=</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 
