WIP UI works except for operations alignment, and text appears on button hover

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <p class="calculator-font">%</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="">÷</p>
+              <p class="calculator-operations-font">÷</p>
             </div>
           </div>
           <div class="calculator-row">
@@ -43,7 +43,7 @@
               <p class="calculator-font">9</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-font"></p>
+              <p class="calculator-operations-font">Q</p>
             </div>
           </div>
           <div class="calculator-row">
@@ -57,7 +57,7 @@
               <p class="calculator-font">6</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-font .calculator-operations-color">—</p>
+              <p class="calculator-operations-font calculator-operations-color">—</p>
             </div>
           </div>
           <div class="calculator-row">
@@ -71,7 +71,7 @@
               <p class="calculator-font">3</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-font .calculator-operations-color">+</p>
+              <p class="calculator-operations-font calculator-operations-color">+</p>
             </div>
           </div>
           <div class="calculator-row">
@@ -82,7 +82,7 @@
               <p class="calculator-font">•</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-font">=</p>
+              <p class="calculator-operations-font">=</p>
             </div>
           </div>
         </div>
