WIP function to display num on calculator

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
       <div class="calculator-body">
         <div class="calculator-window">
+            <h1>0</h1>
             <div class="btn-window btn-close btn-spacing">x</div>
             <div class="btn-window btn-min btn-spacing">-</div>
             <div class="btn-window btn-open btn-spacing">+</div>
@@ -33,7 +34,7 @@
             </div>
           </div>
           <div class="calculator-row">
-            <div class="calculator-button calculator-num-colors">
+            <div id="seven" class="calculator-button calculator-num-colors">
               <p class="calculator-font">7</p>
             </div>
             <div class="calculator-button calculator-num-colors">
@@ -90,5 +91,6 @@
     </div>
   </div>
 
+  <script src="public/scripts/app.js"></script>
 </body>
 </html>
