--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <pre id='json'></pre>
       <div class="calculator-body">
         <div class="calculator-window">
+          <div class="screen-buttons">
+            <div class="btn btn-close btn-spacing">x</div>
+            <div class="btn btn-min btn-spacing">-</div>
+            <div class="btn btn-open btn-spacing">+</div>
+          </div>
             <h1 class="calculator-display-num">0</h1>
-            <div class="btn-window btn-close btn-spacing">x</div>
-            <div class="btn-window btn-min btn-spacing">-</div>
-            <div class="btn-window btn-open btn-spacing">+</div>
         </div>
         <div class="calculator-nums">
           <div class="calculator-row">
