Add pseudocode to the program

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <pre id='json'></pre>
       <div class="calculator-body">
         <div class="calculator-window">
-          <div class="screen-buttons">
+<!--           <div class="screen-buttons">
             <div class="btn btn-close btn-spacing">x</div>
             <div class="btn btn-min btn-spacing">-</div>
             <div class="btn btn-open btn-spacing">+</div>
-          </div>
+          </div> -->
             <h1 class="calculator-display-num">0</h1>
         </div>
         <div class="calculator-nums">
