Calculator displays numbers in the window and class object created

--- a/index.html
+++ b/index.html
@@ -23,69 +23,69 @@
         <div class="calculator-nums">
           <div class="calculator-row">
             <div class="calculator-button calculator-num-colors">
-              <p id="ac" class="calculator-font">AC</p>
+              <div data-value="AC" class="calculator-font AC-button">AC</div>
             </div>
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">+/-</p>
+              <p data-value="positiveOrNeg" class="calculator-font">+/-</p>
             </div>
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">%</p>
+              <p data-value="percent" class="calculator-font">%</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-operations-font">÷</p>
+              <p data-value="divide" class="calculator-operations-font">÷</p>
             </div>
           </div>
           <div class="calculator-row">
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">7</p>
+              <p data-value="seven" class="calculator-font">7</p>
             </div>
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">8</p>
+              <p data-value="eight" class="calculator-font">8</p>
             </div>
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">9</p>
+              <p data-value="nine" class="calculator-font">9</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-operations-font">x</p>
+              <p data-value="multiply" class="calculator-operations-font">x</p>
             </div>
           </div>
           <div class="calculator-row">
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">4</p>
+              <p data-value="four" class="calculator-font">4</p>
             </div>
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">5</p>
+              <p data-value="five" class="calculator-font">5</p>
             </div>
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">6</p>
+              <p data-value="six" class="calculator-font">6</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-operations-font calculator-operations-color">—</p>
+              <p data-value="subtract" class="calculator-operations-font calculator-operations-color">—</p>
             </div>
           </div>
           <div class="calculator-row">
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">1</p>
+              <p data-value="1" class="calculator-font">1</p>
             </div>
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">2</p>
+              <p data-value="2" class="calculator-font">2</p>
             </div>
             <div class="calculator-button calculator-num-colors">
-              <p class="calculator-font">3</p>
+              <p data-value="3" class="calculator-font">3</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-operations-font calculator-operations-color">+</p>
+              <p data-value="add" class="calculator-operations-font calculator-operations-color">+</p>
             </div>
           </div>
           <div class="calculator-row">
             <div class="calculator-button-zero calculator-num-colors">
-              <p class="calculator-font">0</p>
+              <p data-value="zero" class="calculator-font">0</p>
             </div>
             <div id="dec-point" class="calculator-button calculator-num-colors">
-              <p class="calculator-font">•</p>
+              <p data-value="decimal" class="calculator-font">•</p>
             </div>
             <div class="calculator-button calculator-operations">
-              <p class="calculator-operations-font">=</p>
+              <p data-value="equals" class="calculator-operations-font">=</p>
             </div>
           </div>
         </div>
