WIP numbers display in calculator window

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="calculator-nums">
           <div class="calculator-row">
             <div class="calculator-button calculator-num-colors">
-              <div data-value="AC" class="calculator-font AC-button">AC</div>
+              <div data-value="AC" class="calculator-font">AC</div>
             </div>
             <div class="calculator-button calculator-num-colors">
               <p data-value="positiveOrNeg" class="calculator-font">+/-</p>
